--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
     <li><a href="1.html">Example-1</a></li>
     <li><a href="2.thml">SI Calc</a></li>
+    <li><a href="3.thml">SI Calc</a></li>     
     
     </ul>
     
