--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <h3>Learning JavaScript is fun</h3><hr/>
     <ul>
     <li><a href="1.html">Example-1</a></li>
-    <li><a href="2.thml">SI Calc</a></li>
-    <li><a href="3.thml">SI Calc</a></li>     
+    <li><a href="2.html">SI Calc</a></li>
+    <li><a href="3.html">Elebill</a></li>     
     
     </ul>
     
