--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <ul>
     <li><a href="1.html">Example-1</a></li>
     <li><a href="2.html">SI Calc</a></li>
-    <li><a href="3.html">Elebill</a></li>     
+    <li><a href="3.html">Elebill</a></li>
+     <li><a href="4.html">Numbers</a></li>  
     
     </ul>
     
