--- a/4.html
+++ b/4.html
@@ -18,6 +18,10 @@
      <button onclick="factorial()">Factorial</button>
     <button onclick="factors()">Factors</button>
     <button onclick="fibonancci()">Fibonancci</button>
+    <button onclick="reverse()">Reverse</button>
+    <button onclick="palindrome()">Palindrome</button>
+    <button onclick="sumofdigits()">Sum</button>
+    <button onclick="sumgetssingle()">Singledigit</button>
     
 
     </p>
