--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <li><a href="3.html">Elebill</a></li>
     <li><a href="4.html">Numbers</a></li> 
     <li><a href="5.html">Number Operation</a></li> 
-    <li><a href="6.html">js</a></li> 
+    <li><a href="6.html">Login form</a></li> 
     </ul>
     
     
